library/general/uniqueingresshostnames/example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gatekeeper-test-ingress
  namespace: gatekeeper-system
spec:
  rules:
  - host: acmecorp.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
