library/general/uniqueingresshostnames/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueIngressHostnames
metadata:
  name: unique-ingress-hostnames
  labels:
    owner: admin.agilebank.demo
